<?xml version="1.0" encoding="utf-8"?>

<resources>

    <!-- Global -->

    <string name="app_name">Ensichat</string>


    <!-- FirstStartActivity -->

    <!-- Activity title -->
    <string name="welcome">Welcome!</string>

    <!-- Label for name field -->
    <string name="enter_name">Enter your Name:</string>

    <!-- Label for button to finish activity -->
    <string name="done">Done</string>

    <!-- Toast shown if location permission is not granted -->
    <string name="toast_location_required">Location permission is required to scan for other Bluetooth devices</string>

    <!-- MainActivity -->

    <!-- Toast shown if user denies request to enable bluetooth -->
    <string name="toast_bluetooth_denied">Please enable Bluetooth to connect with devices near you</string>


    <!-- ContactsFragment -->

    <!-- Number of connections shown in actionbar -->
    <plurals name="title_connections">
        <item quantity="one">1 Connection</item>
        <item quantity="other">%s Connections</item>
    </plurals>

    <!-- Empty text for contacts list -->
    <string name="no_contacts_found">You haven\'t added any contacts yet</string>

    <!-- Menu item to share this app's apk -->
    <string name="share_app">Share App</string>

    <!-- Menu item to close app and stop service -->
    <string name="exit">Exit</string>

    <!-- ChatFragment -->

    <!-- Hint text for the message EditText -->
    <string name="message_hint">Type a message</string>


    <!-- ConnectionsActivity -->

    <!-- Activity title -->
    <string name="connections">Connections</string>

    <!-- Empty text for devices list -->
    <string name="no_connections">Searching for Users\nRange: ~10m</string>

    <!-- Alertdialog message to add new contact -->
    <string name="dialog_add_contact">Do you want to add %1$s as contact?</string>

    <!-- Toast shown after contact has been added -->
    <string name="toast_contact_added">Contact added</string>

    <!-- Toast shown when clicking a user that is already a contact -->
    <string name="contact_already_added">You have already added %1$s as a contact</string>

    <string name="enter_id">Enter user ID</string>

    <string name="invalid_address">Invalid address</string>

    <string name="add_contact">Add Contact</string>

    <string name="scan_qr_code">Scan QR-Code</string>


    <!-- SettingsActivity -->

    <!-- Activity title -->
    <string name="settings">Settings</string>

    <!-- Preference title -->
    <string name="user_name">Name</string>

    <!-- Preference title -->
    <string name="user_status">Status</string>

    <!-- Preference title -->
    <string name="my_address">My Address</string>

    <!-- Preference title -->
    <string name="scan_interval_seconds">Scan Interval (seconds)</string>

    <!-- Preference title -->
    <string name="start_on_boot">Start on Boot</string>

    <!-- Preference title -->
    <string name="notification_sounds">Notification Sounds</string>

    <!-- Preference title (debug only)-->
    <string name="max_connections" translatable="false">Maximum Number of Connections</string>

    <!-- Preference title -->
    <string name="servers">Servers</string>

    <!-- Preference title -->
    <string name="report_issue">Report Issue</string>

    <!-- Preference summary -->
    <string name="report_issue_summary">Open the Ensichat issue tracker</string>

    <string name="issue_tracker_url" translatable="false">https://github.com/Nutomic/ensichat/issues</string>

    <!-- Preference title -->
    <string name="version">Version</string>

    <!-- IdenticonFragment -->

    <!-- Device address label and value -->
    <string name="address_colon">Address: %1$s</string>


    <!-- ChatService -->

    <!-- Notification text for incoming message -->
    <string name="notification_message">New message!</string>

    <!-- Info text for persistent notification -->
    <plurals name="notification_connections">
        <item quantity="one">Connected to %1$s device</item>
        <item quantity="other">Connected to %1$s devices</item>
    </plurals>

</resources>
